ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-apps-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - probo.itsarc.me
      - zep.itsarc.me
    secretName: mysecret
  rules:
  - host: probo.itsarc.me
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 3000
      - path: /socket
        pathType: Prefix
        backend:
          service:
            name: ws-service
            port: 
              number: 8080
  - host: zep.itsarc.me
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: gathertown-server
            port: 
              number: 3000
      - path: /socket
        pathType: Prefix
        backend:
          service:
            name: gathertown-ws
            port:
              number: 8080
